<resources>
    <string name="app_name">ArduinoConsole</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="error_title">Error...</string>
    <string name="ok">OK</string>
    <string name="abort">Abort</string>
    <string name="msg_emptycommands">Empty command\'s not allowed.</string>
    <string-array name="baudarray">
        <item>300</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>74880</item>
        <item>115200</item>
        <item>230400</item>
        <item>250000</item>
    </string-array>
    <string-array name="databitsarray">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="stopbitsarray">
        <item>1</item>
        <item>3</item>
        <item>2</item>
    </string-array>
    <string-array name="parityarray">
        <item>NONE</item>
        <item>ODD</item>
        <item>EVEN</item>
        <item>MARK</item>
        <item>SPACE</item>
    </string-array>
    <string-array name="connectionarray">
        <item>USB Serial Connection</item>
        <item>Bluetooth Connection</item>
        <item>HTTP Connection</item>
    </string-array>
    <string name="usb_serial_connection">USB Serial Connection</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="http_connection">HTTP Connection</string>
    <string-array name="bluetoothtypearray">
        <item>HC-05</item>
        <item>HC-06</item>
        <item>HM-10</item>
    </string-array>
    <string-array name="timestamparray">
        <item>yyyy/MM/dd</item>
        <item>yyyy/MM/dd HH:mm:ss</item>
        <item>dd.MM.yyyy</item>
        <item>dd.MM.yyyy HH:mm:ss</item>
    </string-array>
    <string name="title_activity_impressum">ImpressumActivity</string>
    <string name="impressum">Legal info</string>
    <string name="graph">Graph</string>
    <string name="configuration">Configuration</string>
    <string name="datenschutztext">The use of App "AndroidConsole" by Stefan Draeger Software is possible without declaration of personal
        Related data. We emphasize that data transfer on Internet  (e.g. through e-mail communication) can have security loopholes.
        A watertight safeguard to data access through a third party is not possible (or not guaranteed??).
        Commercials and information material, which are not called up, are herewith prohibited.</string>
    <string name="buildversion">Build</string>
    <string name="seriesTxt">Test</string>
    <string name="chartValueTxt">TextChart</string>
    <string name="werteText">Value</string>
    <string name="datumText">Timestamp</string>
    <string name="chartText">Graph</string>
    <string name="export">Export</string>
    <string name="exportPdf"><![CDATA[PDF export (data & chart)]]></string>
    <string name="exportCSV">CSV export (data only)</string>
    <string name="exportTitle">Choose export type...</string>
    <string name="chartPreferences">Chart preferences...</string>
    <string name="filenotfoundmessage">File %s not found!</string>
    <string name="chartExport">Chart export (chart only)</string>
    <string name="pdfMetaDataTitle">ArduinoConsole</string>
    <string name="pdfMetaDataSubject">ArduinoConsole by Draeger-IT.blog</string>
    <string name="pdfMetaDataAuthor">Stefan Draeger</string>
    <string name="pdfMetaDataCreator">Stefan Draeger</string>
    <string name="pdfExportTitle">ArduinoConsole</string>
    <string name="pdfExportSubTitle">by Draeger-IT.blog</string>
    <string name="pdfExportValueTableColID">ID</string>
    <string name="pdfExportValueTableColTimestamp">Timestamp</string>
    <string name="pdfExportValueTableColValue">Value</string>
    <string name="pdfExportParameterTableColDescription">Description</string>
    <string name="pdfExportConnectionParameter">Connection parameter</string>
    <string name="pdfExportDevice">Device: %s</string>
    <string name="pdfExportBaudrate">Baudrate: %s</string>
    <string name="pdfExportDatabits">Databits: %s</string>
    <string name="pdfExportStopbits">Stopbits: %s</string>
    <string name="pdfExportParity">Parity: %s</string>
    <string name="pdfExportChartParameter">Chart parameter</string>
    <string name="pdfExportChartFrom">from: %s</string>
    <string name="pdfExportChartTo">to: %s</string>
    <string name="pdfExportChartMinValue">Min value: %s</string>
    <string name="pdfExportChartMaxValue">Max value: %s</string>
    <string name="pdfExportChartAveragePeak">Average peak: %s</string>
    <string name="save">Save</string>
    <string name="graphTitle">Title</string>
    <string name="graphValueAxisLbl">Value axis label</string>
    <string name="graphDateAxis">Date axis label</string>
    <string name="chartPrefSubTitle">Subtitle</string>
    <string name="graphProgressTitle">Please wait...</string>
    <string name="graphProgressMessage">Generate document.</string>
    <string name="sendBtnTxt">Send</string>
    <string name="autoscrollChkBoxTxt">Autoscroll</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="generalTabTitle">General</string>
    <string name="connectionTabTitle">Connection</string>
    <string name="terminalTabTitle">Terminal</string>
    <string name="action_save">Save</string>
    <string name="save_connection">Save successfull connection settings.</string>
    <string name="save_terminal">Save successfull terminal settings.</string>
    <string name="device">Device</string>
    <string name="deviceConnectionTyp">Connectiontype</string>
    <string name="msg_no_driver_found">No driver with name %1$s not found.</string>
    <string name="usbserialdevice">USB Serial Device</string>
    <string name="bluetoothdevice">Bluetooth Device</string>
    <string name="type">Type</string>
    <string name="msg_no_bluetooth_support">No Bluetooth support!</string>
    <string name="txtAskForCloseBluetoothConnection">Show dialog for closing Bluetooth Connection if not in use by application.</string>
    <string name="msg_close_bluetooth_connection">Disable Bluetoothadapter?</string>
    <string name="dont_show_this_dialog">Don\'t show this dialog anymore.</string>
    <string name="bluetoothadapter_not_in_use">Bluetoothadapter not in use, please disable Bluetoothadapter.</string>
    <string name="disable">Disable</string>
    <string name="msg_title_create_connection">Create connection...</string>
    <string name="msg_msg_create_connection">Please wait while create Bluetoothconnection to %1$s</string>
    <string name="msg_search_new_devices">Search new devices?</string>
    <string name="msg_searchdevicesquestion">Whould you search for new devices?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_search_new_devices_dialog">Show search new devices dialog.</string>
    <string name="bluetooth_off">Bluetoothadapter state is off</string>
    <string name="bluetooth_on">Bluetoothadapter state is on</string>
    <string name="bluetooth_turning_on">Bluetoothadapter is in state enable</string>
    <string name="bluetooth_turning_off">Bluetoothadapter state is disable</string>
    <string name="not_bounded"> (not bounded)</string>
    <string name="screen">Screen</string>
    <string name="stay_awake_while_connected">Device is activ  while connected to arduino.</string>
    <string name="blt_greeting_chkbox">Send greetingmessage</string>
    <string name="blt_greeting_lbl">Greetingmessage</string>
    <string name="connection_error">Can\'t connect to %s.</string>
    <string name="msg_no_connection">No connection found!</string>
    <string name="MessagesLbl">Messages</string>
    <string name="displayTimestampLbl">display Timestamp</string>
    <string name="timestampFormatLbl">Timestampformat</string>
    <string name="exampleLbl">Example</string>
    <string name="hilfe">Help</string>
    <string name="hilfeVerbindung">Connection</string>
    <string name="serielleVerbindung"><u>serial connection</u></string>
    <string name="title_activity_hilfe">Help</string>
    <string name="bluetoothVerbindung"><u>bluetooth connection</u></string>
    <string name="hilfeReleaseLetter">Release Letter</string>
    <string name="hilfeGraph">Graph</string>
    <string name="createGraph"><u>create graph</u></string>
    <string name="exportGraph"><u>export graph</u></string>
    <string name="configureGraph"><u>configure graph</u></string>
    <string name="hilfeAllgemein">Main</string>
    <string name="hilfeMainOverview"><u>overview</u></string>
    <string name="helpGermanOnly">The current help page is only in german available.</string>
    <string name="controller">Controller</string>
    <string name="action_edit">Edit</string>
    <string name="no_function_for_command">No function for button %s set. Please visit controllersettings to define a command.</string>
    <string name="buttona">A</string>
    <string name="buttonb">B</string>
    <string name="buttonc">C</string>
    <string name="buttond">D</string>
    <string name="buttonUp">up</string>
    <string name="buttonDown">down</string>
    <string name="buttonLeft">left</string>
    <string name="buttonRight">right</string>
    <string name="alert">Attention...</string>
    <string name="action_sensor">Sensors</string>
    <string name="controllersettings">Controllersettings</string>
    <string name="graphpreferences">Settings</string>
    <string name="clear">Clear</string>
    <string name="text_buttonup">Button up:</string>
    <string name="text_buttondown">Button down:</string>
    <string name="text_buttonleft">Button left:</string>
    <string name="text_buttonright">Button right:</string>
    <string name="text_buttona">Button A:</string>
    <string name="commandsTabTitle">Commands</string>
    <string name="text_buttonb">Button B:</string>
    <string name="text_buttonc">Button C:</string>
    <string name="text_buttond">Button D:</string>
    <string name="empty" />
    <string name="txt_button_start">START</string>
    <string name="txt_button_select">SELECT</string>
    <string name="hilfeController">Controller</string>
    <string name="hilfeControllerConfig">configuration</string>
    <string name="hilfeConfiguration">Configuration</string>
    <string name="hilfeconfigConnection">connection</string>
    <string name="hilfeconfigGeneral">general</string>
    <string name="hilfeconfigTerminal">terminal</string>
    <string name="text_button_start">Button Start:</string>
    <string name="text_button_select">Button Select:</string>
    <string name="appendLineBreakAfterCommand">append line break \\r\\n after command</string>
    <string name="sendMessagesLbl">Send Message</string>
    <string name="allowEmptyMessagesText">allow send empty messages</string>
    <string name="info_title">Information...</string>
    <string name="comming_soon">Comming soon!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clickplusminustoexpand">Click plus / minus to expand / collapse region.</string>
    <string name="http_profile_lbl">Profile</string>
    <string name="msg_addHttpProfile">Add HttpConnectionProfile</string>
    <string name="msg_editHttpProfile">Edit HttpConnectionProfile</string>
    <string name="profilename_txt">Profilename:</string>
    <string name="shema_txt">Shema:</string>
    <string name="serveradress_txt">Serveradress:</string>
    <string name="https_txt">HTTPS</string>
    <string name="http_txt">HTTP</string>
    <string name="testconnection_txt">Test</string>
</resources>