<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/graphItem"
        android:icon="@mipmap/graph"
        android:title="@string/graph"
        app:showAsAction="always" />
    <item
        android:id="@+id/exportItem"
        android:title="@string/export"
        android:icon="@mipmap/download"
        app:showAsAction="always"/>
    <item
        android:id="@+id/configurationItem"
        android:title="@string/configuration"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/impressumItem"
        android:title="@string/impressum"
        app:showAsAction="never" />
</menu>