<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/bluetoothadapter_not_in_use"
        android:textColor="@android:color/black" />

    <CheckBox
        android:id="@+id/dontShowDialogAgainCheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_show_this_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogButtonDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/disable" />

        <Button
            android:id="@+id/dialogButtonAbort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abort" />

    </LinearLayout>

</LinearLayout>