<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_toRightOf="@+id/image"/><![CDATA[/>



    ]]>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <RadioGroup
            android:id="@+id/chartExportRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/pdfExportItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exportPdf" />

            <RadioButton
                android:id="@+id/chartExportItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chartExport" />

            <RadioButton
                android:id="@+id/csvExportItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/exportCSV" />

        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/dialogButtonAbort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abort" />
    </TableRow>

</TableLayout>