<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="0.10"
            android:gravity="center_vertical"
            android:paddingLeft="3dp"
            android:text="@string/MessagesLbl"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="3dp"
        android:padding="6dp">

        <CheckBox
            android:id="@+id/displayTimestampCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/displayTimestampLbl" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="3dp"
        android:paddingLeft="3dp">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestampFormatLbl"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/timestampSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:entries="@array/timestamparray" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="3dp"
        android:paddingLeft="3dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exampleLbl"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/timestampExampleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="TextView"
            android:textColor="@android:color/black" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="3dp"/>
</TableLayout>